[package]
name = "das_api"
version = "0.1.0"
edition = "2021"

[lib]
name = "das_api"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
digital_asset_types = { path = "../digital_asset_types", features = ["json_types", "sql_types"] }
jsonrpsee = {version = "0.14.0", features = ["server", "macros"]}
hyper = "0.14.19"
tracing = "0.1.29"
metrics = "0.19.0"
figment = { version = "0.10.6", features = ["env"] }
serde = "1.0.137"
thiserror = "1.0.31"
tokio = "1.14"
async-trait = "0.1.56"
serde_json = "1.0.81"
cadence = "0.29.0"
cadence-macros = "0.29.0"
sqlx = { version = "0.6.0", features = ["macros", "runtime-tokio-rustls", "postgres", "uuid", "offline", "json"] }
sea-orm = { version = "0.9.0", features = ["macros", "runtime-tokio-rustls", "sqlx-postgres"] }
tokio-postgres = "0.7.5"
solana-sdk = { git = "https://github.com/GenesysGo/solana-das/", branch = "cavey/das" }
bs58 = "0.4.0"