[package]
name = "nft_ingester"
version = "0.0.1"
edition = "2021"

[dependencies]
hex = "0.4.3"
redis = { version = "0.21.5", features = ["aio", "tokio-comp", "streams"] }
futures-util = "0.3.0"
hyper = "0.14"
anchor-client = { git = "https://github.com/GenesysGo/anchor", branch = "tracy/test-validator-geyser-config-and-spl-version" }
base64 = "0.13.0"
thiserror = "1.0.31"
serde_json = "1.0.81"
tokio = { version = "1.17.0", features = ["full"] }
sqlx = { version = "0.6.0", features = ["macros", "runtime-tokio-rustls", "postgres", "uuid", "offline", "json"] }
sea-orm = { version = "0.9.0", features = ["macros", "runtime-tokio-rustls", "sqlx-postgres", "with-chrono"] }
chrono = "0.4.19"
tokio-postgres = "0.7.5"
serde = "1.0.136"
bs58 = "0.4.0"
reqwest = "0.11.11"
csv = "1.1.6"
plerkle_messenger = { git = "https://github.com/GenesysGo/digital-asset-validator-plugin", branch = "main"}
flatbuffers = "2.1.2"
solana-sdk = { version = "1.11.7" }
lazy_static = "1.4.0"
regex = "1.5.5"
plerkle_serialization = { git = "https://github.com/GenesysGo/digital-asset-validator-plugin", branch = "main"}
digital_asset_types = { path = "../digital_asset_types", features = ["json_types", "sql_types"] }
uuid = "1.0.0"
async-trait = "0.1.53"
num-traits = "0.2.15"
gummyroll = { git = "https://github.com/GenesysGo/candyland", features = ["no-entrypoint"] }
bubblegum = { git = "https://github.com/GenesysGo/candyland", features = ["no-entrypoint"] }
figment = { version = "0.10.6", features = ["env"] }
cadence = "0.29.0"
cadence-macros = "0.29.0"
solana-client = "1.11.7"
solana-transaction-status="1.11.7"
toml = "0.5.9"

[dependencies.num-integer]
version = "0.1.44"
default-features = false
